--- a/pothole_analysis.ipynb
+++ b/pothole_analysis.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,11 +91,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "YOLOv5  v7.0-70-g589edc7 Python-3.8.8 torch-1.13.1 CUDA:0 (NVIDIA GeForce RTX 3060 Laptop GPU, 6144MiB)\n",
+      "YOLOv5  2023-1-17 Python-3.9.15 torch-1.13.1 CUDA:0 (NVIDIA GeForce RTX 3060 Laptop GPU, 6144MiB)\n",
       "\n",
       "Loading pretrained_model\\yolov5.onnx for ONNX Runtime inference...\n",
       "Adding AutoShape... \n",
-      "100%|██████████| 3844/3844 [03:21<00:00, 19.12it/s]\n"
+      "100%|██████████| 3844/3844 [03:59<00:00, 16.05it/s]\n"
      ]
     }
    ],
@@ -994,7 +994,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "smartathon",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1008,7 +1008,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15 (default, Nov 24 2022, 14:38:14) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
