fixed rendering of latex.

--- a/pothole_analysis.ipynb
+++ b/pothole_analysis.ipynb
@@ -5,15 +5,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
+    "$\n",
     "\\Large{Smartathon} \\\\\n",
+    "\\large{} \\\\\n",
     "\\text{Complete Pothole Analysis from Visual Input} \\\\\n",
     "\\text{Team Name: akatsuki} \\\\\n",
     "\\text{Team Member: Nippun Sharma} \\\\\n",
-    "$$\n",
+    "$\n",
+    "\n",
     "Email: [inbox.nippun@gmail.com](inbox.nippun@gmail.com)\n",
     "\n",
-    "$$\n",
+    "$\n",
     "\\large{Introduction} \\\\\n",
     "\\normalsize{} \\\\\n",
     "\\text{The problem provided is to accurately detect and localize potholes in a given area, just by using a video input stream from} \\\\\n",
@@ -21,19 +23,19 @@
     "\\text{predictions. In this document, I will propose an automated way for detecting, locating, and possibly reconstructing potholes} \\\\\n",
     "\\text{just using the video input. As a proof of concept (PoC), I will also apply most of the discussed techniques on the example video} \\\\\n",
     "\\text{file provided by the organizers.}\n",
-    "$$\n",
+    "$\n",
     "<br></br>\n",
-    "$$\n",
+    "$\n",
     "\\large{Detection} \\\\\n",
     "\\normalsize{} \\\\\n",
     "\\text{The most straight-forward part of this challenge was to detect potholes i.e. create bounding-boxes around potholes in the} \\\\\n",
     "\\text{video. I used a Yolov5m (medium) model to perform this task. The model was trained on the 2022 version of the Road Damage} \\\\\n",
     "\\text{Detection Dataset. This dataset consists Potholes, Longitudinal Cracks, Transverse Cracks and Aligator Cracks.} \\\\\n",
-    "$$\n",
+    "$\n",
     "[This](https://github.com/sekilab/RoadDamageDetector) is the link to github repository of the RDD Dataset.\n",
     "\n",
     "<br></br>\n",
-    "$$\n",
+    "$\n",
     "\\large{Tracking} \\\\\n",
     "\\normalsize{} \\\\\n",
     "\\text{In our case we also want to count the total number of unique potholes that were visible in the entire journey.} \\\\\n",
@@ -42,7 +44,7 @@
     "\\text{tracking. Tracking is the process of assigning a unique identifier to a bounding-box and keeping sure that the box has the same} \\\\\n",
     "\\text{identifier in all subsequent frames. Tracking will prevent the double-counting and we will be able to count the actual number of} \\\\\n",
     "\\text{potholes. I used SORT (Simple Online and Realtime Tracking), which is a computer-vision based algorithm to track bounding boxes.}\n",
-    "$$"
+    "$"
    ]
   },
   {
@@ -247,7 +249,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
+    "$\n",
     "\\large{} \\\\\n",
     "\\text{Absolute Scale} \\\\\n",
     "\\normalsize{} \\\\\n",
@@ -257,7 +259,8 @@
     "\\text{travelled by the vehicle. Our problem falls under a special category of SFM where our vehicle puts certain constraints on the camera} \\\\\n",
     "\\text{motion, that are known as non-holonomic constraints. Especially, when the camera is at an offset w.r.t. the car's center of gravity.} \\\\\n",
     "\\text{The solution is based on the physics behind the instantaneous center of rotation (ICR). Basically, any moving object can be considered} \\\\\n",
-    "\\text{as rotating about its ICR.}$$\n",
+    "\\text{as rotating about its ICR.} \\\\ \\\\\n",
+    "$\n",
     "For an in-depth analysis into the setup and solution, you can read this very interesting [paper](https://rpg.ifi.uzh.ch/docs/ICCV09_scaramuzza.pdf) by Davide Scaramuzza. Below is the code that I have written after reading the paper and I use it for generating an approximate absolute\n",
     "scale value. I have used the least-squares version, which is a 3-point algorithm. Also, as a quick demonstration (when we plot using visual\n",
     "odometry) I have extracted a subset of frames from the demo video where the car is turning around the corner."
@@ -490,13 +493,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
+    "$\n",
     "\\large{}\n",
     "\\text{Visual Odometry} \\\\\n",
     "\\normalsize{} \\\\\n",
     "\\text{Visual Odometry is the process of reconstructing the camera path through visual input / video. The VO is calculated in a relative scale.} \\\\\n",
     "\\text{However, since we have estimated an absolute scale we have the information to construct an odometry in the absolute scale.}\n",
-    "$$"
+    "$"
    ]
   },
   {
@@ -581,7 +584,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\n",
+    "$\n",
     "\\large{}\n",
     "\\text{3D Reconstruction} \\\\\n",
     "\\normalsize{} \\\\\n",
@@ -589,7 +592,7 @@
     "\\text{popular technique that is used to create 3D point clouds using multiple photos. However, our problem is of a special kind.} \\\\\n",
     "\\text{We have to model the road surface which is a near-planar surface. Due to this planarity, an ambiguity arises in the calculation} \\\\\n",
     "\\text{of the Fundamental Matrix. Therefore, the normal equations of SFM might not produce great results in our case.}\n",
-    "$$\n",
+    "$\n",
     "To know more about how near-planar surfaces cause this ambiguity, this [paper](https://www.mdpi.com/1424-8220/20/6/1640) proves the same.\n",
     "The paper also derives a new unambiguous equation for calculating the fundamental matrix using the homography matrix.\n",
     "Further, this paper also provides a great recursive post-processing technique on pothole point clouds that can improve the structure\n",
@@ -979,7 +982,7 @@
    "source": [
     "The resulting cropped images can then be used with VisualSFM or any other SFM tool.\n",
     "\n",
-    "$$\n",
+    "$\n",
     "\\large{Conclusion} \\\\\n",
     "\\normalsize{} \\\\\n",
     "\\text{As we observed that, even by using a single video source, we can generate a lot of analysis about the surrounding. The detection} \\\\\n",
@@ -988,7 +991,7 @@
     "\\text{this can even be deployed on smartphones. The solution is completely autonomous as there is no input required from a human.} \\\\\n",
     "\\text{From object detection and tracking to 3d reconstruction, everything can be done automatically using different heuristics. A human} \\\\\n",
     "\\text{is needed only in a supervising capacity.}\n",
-    "$$"
+    "$"
    ]
   }
  ],
@@ -1008,7 +1011,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.15 | packaged by conda-forge | (main, Nov 22 2022, 08:39:05) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
