--- a/pothole_analysis.ipynb
+++ b/pothole_analysis.ipynb
@@ -5,46 +5,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\n",
-    "\\Large{Smartathon} \\\\\n",
-    "\\large{} \\\\\n",
-    "\\text{Complete Pothole Analysis from Visual Input} \\\\\n",
-    "\\text{Team Name: akatsuki} \\\\\n",
-    "\\text{Team Member: Nippun Sharma} \\\\\n",
-    "$\n",
+    "### Smartathon\n",
+    "### Complete Pothole Analysis from Visual Input\n",
+    "#### Team Name: akatsuki\n",
+    "#### Team Member: Nippun Sharma\n",
     "\n",
     "Email: [inbox.nippun@gmail.com](inbox.nippun@gmail.com)\n",
     "\n",
-    "$\n",
-    "\\large{Introduction} \\\\\n",
-    "\\normalsize{} \\\\\n",
-    "\\text{The problem provided is to accurately detect and localize potholes in a given area, just by using a video input stream from} \\\\\n",
-    "\\text{a moving car. The challenge itself becomes complicated as we are only allowed to use the video frames to perform any sort of} \\\\\n",
-    "\\text{predictions. In this document, I will propose an automated way for detecting, locating, and possibly reconstructing potholes} \\\\\n",
-    "\\text{just using the video input. As a proof of concept (PoC), I will also apply most of the discussed techniques on the example video} \\\\\n",
-    "\\text{file provided by the organizers.}\n",
-    "$\n",
-    "<br></br>\n",
-    "$\n",
-    "\\large{Detection} \\\\\n",
-    "\\normalsize{} \\\\\n",
-    "\\text{The most straight-forward part of this challenge was to detect potholes i.e. create bounding-boxes around potholes in the} \\\\\n",
-    "\\text{video. I used a Yolov5m (medium) model to perform this task. The model was trained on the 2022 version of the Road Damage} \\\\\n",
-    "\\text{Detection Dataset. This dataset consists Potholes, Longitudinal Cracks, Transverse Cracks and Aligator Cracks.} \\\\\n",
-    "$\n",
+    "### Introduction\n",
+    "The problem provided is to accurately detect and localize potholes in a given area, just by using a video input stream from\n",
+    "a moving car. The challenge itself becomes complicated as we are only allowed to use the video frames to perform any sort of\n",
+    "predictions. In this document, I will propose an automated way for detecting, locating, and possibly reconstructing potholes\n",
+    "just using the video input. As a proof of concept (PoC), I will also apply most of the discussed techniques on the example video\n",
+    "file provided by the organizers.\n",
+    "\n",
+    "\n",
+    "### Detection\n",
+    "The most straight-forward part of this challenge was to detect potholes i.e. create bounding-boxes around potholes in the\n",
+    "video. I used a Yolov5m (medium) model to perform this task. The model was trained on the 2022 version of the Road Damage\n",
+    "Detection Dataset. This dataset consists Potholes, Longitudinal Cracks, Transverse Cracks and Aligator Cracks.\n",
+    "\n",
     "[This](https://github.com/sekilab/RoadDamageDetector) is the link to github repository of the RDD Dataset.\n",
     "\n",
-    "<br></br>\n",
-    "$\n",
-    "\\large{Tracking} \\\\\n",
-    "\\normalsize{} \\\\\n",
-    "\\text{In our case we also want to count the total number of unique potholes that were visible in the entire journey.} \\\\\n",
-    "\\text{A normal detector will not provide us with unique boxes, as a pothole detected in one frame will also get detected in the next one.} \\\\\n",
-    "\\text{Thus counting the total number of detections will lead to a double-counting problem. To tackle this problem, I used detection with} \\\\\n",
-    "\\text{tracking. Tracking is the process of assigning a unique identifier to a bounding-box and keeping sure that the box has the same} \\\\\n",
-    "\\text{identifier in all subsequent frames. Tracking will prevent the double-counting and we will be able to count the actual number of} \\\\\n",
-    "\\text{potholes. I used SORT (Simple Online and Realtime Tracking), which is a computer-vision based algorithm to track bounding boxes.}\n",
-    "$"
+    "### Tracking\n",
+    "In our case we also want to count the total number of unique potholes that were visible in the entire journey.\n",
+    "A normal detector will not provide us with unique boxes, as a pothole detected in one frame will also get detected in the next one.\n",
+    "Thus counting the total number of detections will lead to a double-counting problem. To tackle this problem, I used detection with\n",
+    "tracking. Tracking is the process of assigning a unique identifier to a bounding-box and keeping sure that the box has the same\n",
+    "identifier in all subsequent frames. Tracking will prevent the double-counting and we will be able to count the actual number of\n",
+    "potholes. I used SORT (Simple Online and Realtime Tracking), which is a computer-vision based algorithm to track bounding boxes."
    ]
   },
   {
@@ -249,18 +238,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\n",
-    "\\large{} \\\\\n",
-    "\\text{Absolute Scale} \\\\\n",
-    "\\normalsize{} \\\\\n",
-    "\\text{It is well known that the structure-of-motion from a single camera only results in a reconstruction up to a scale. Meaning that, there} \\\\\n",
-    "\\text{is no sense of absolute distances (such as metres or centi-meters), all points are relatively placed up to a scale. However, in our} \\\\\n",
-    "\\text{case, it is required to measure the actual dimensions of the pothole and find its absolute location within the complete journey} \\\\\n",
-    "\\text{travelled by the vehicle. Our problem falls under a special category of SFM where our vehicle puts certain constraints on the camera} \\\\\n",
-    "\\text{motion, that are known as non-holonomic constraints. Especially, when the camera is at an offset w.r.t. the car's center of gravity.} \\\\\n",
-    "\\text{The solution is based on the physics behind the instantaneous center of rotation (ICR). Basically, any moving object can be considered} \\\\\n",
-    "\\text{as rotating about its ICR.} \\\\ \\\\\n",
-    "$\n",
+    "### Absolute Scale\n",
+    "It is well known that the structure-of-motion from a single camera only results in a reconstruction up to a scale. Meaning that, there\n",
+    "is no sense of absolute distances (such as metres or centi-meters), all points are relatively placed up to a scale. However, in our\n",
+    "case, it is required to measure the actual dimensions of the pothole and find its absolute location within the complete journey\n",
+    "travelled by the vehicle. Our problem falls under a special category of SFM where our vehicle puts certain constraints on the camera\n",
+    "motion, that are known as non-holonomic constraints. Especially, when the camera is at an offset w.r.t. the car's center of gravity.\n",
+    "The solution is based on the physics behind the instantaneous center of rotation (ICR). Basically, any moving object can be considered\n",
+    "as rotating about its ICR.\n",
+    "\n",
     "For an in-depth analysis into the setup and solution, you can read this very interesting [paper](https://rpg.ifi.uzh.ch/docs/ICCV09_scaramuzza.pdf) by Davide Scaramuzza. Below is the code that I have written after reading the paper and I use it for generating an approximate absolute\n",
     "scale value. I have used the least-squares version, which is a 3-point algorithm. Also, as a quick demonstration (when we plot using visual\n",
     "odometry) I have extracted a subset of frames from the demo video where the car is turning around the corner."
@@ -493,13 +479,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\n",
-    "\\large{}\n",
-    "\\text{Visual Odometry} \\\\\n",
-    "\\normalsize{} \\\\\n",
-    "\\text{Visual Odometry is the process of reconstructing the camera path through visual input / video. The VO is calculated in a relative scale.} \\\\\n",
-    "\\text{However, since we have estimated an absolute scale we have the information to construct an odometry in the absolute scale.}\n",
-    "$"
+    "### Visual Odometry\n",
+    "Visual Odometry is the process of reconstructing the camera path through visual input / video. The VO is calculated in a relative scale.\n",
+    "However, since we have estimated an absolute scale we have the information to construct an odometry in the absolute scale."
    ]
   },
   {
@@ -584,15 +566,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\n",
-    "\\large{}\n",
-    "\\text{3D Reconstruction} \\\\\n",
-    "\\normalsize{} \\\\\n",
-    "\\text{The final part of the pipeline can be to create a 3 dimensional reconstruction of a pothole. Structure From Motion is the most} \\\\\n",
-    "\\text{popular technique that is used to create 3D point clouds using multiple photos. However, our problem is of a special kind.} \\\\\n",
-    "\\text{We have to model the road surface which is a near-planar surface. Due to this planarity, an ambiguity arises in the calculation} \\\\\n",
-    "\\text{of the Fundamental Matrix. Therefore, the normal equations of SFM might not produce great results in our case.}\n",
-    "$\n",
+    "### 3D Reconstruction\n",
+    "The final part of the pipeline can be to create a 3 dimensional reconstruction of a pothole. Structure From Motion is the most\n",
+    "popular technique that is used to create 3D point clouds using multiple photos. However, our problem is of a special kind.\n",
+    "We have to model the road surface which is a near-planar surface. Due to this planarity, an ambiguity arises in the calculation\n",
+    "of the Fundamental Matrix. Therefore, the normal equations of SFM might not produce great results in our case\n",
+    "\n",
+    "\n",
     "To know more about how near-planar surfaces cause this ambiguity, this [paper](https://www.mdpi.com/1424-8220/20/6/1640) proves the same.\n",
     "The paper also derives a new unambiguous equation for calculating the fundamental matrix using the homography matrix.\n",
     "Further, this paper also provides a great recursive post-processing technique on pothole point clouds that can improve the structure\n",
@@ -982,16 +962,13 @@
    "source": [
     "The resulting cropped images can then be used with VisualSFM or any other SFM tool.\n",
     "\n",
-    "$\n",
-    "\\large{Conclusion} \\\\\n",
-    "\\normalsize{} \\\\\n",
-    "\\text{As we observed that, even by using a single video source, we can generate a lot of analysis about the surrounding. The detection} \\\\\n",
-    "\\text{aspect of this approach is definitely more mature. We can even say that the accuracy obtained through pothole detection and tracking} \\\\\n",
-    "\\text{can be at least as good as LIDAR if not better. Moreover, the overall infrastructure required to setup this is negligible and} \\\\\n",
-    "\\text{this can even be deployed on smartphones. The solution is completely autonomous as there is no input required from a human.} \\\\\n",
-    "\\text{From object detection and tracking to 3d reconstruction, everything can be done automatically using different heuristics. A human} \\\\\n",
-    "\\text{is needed only in a supervising capacity.}\n",
-    "$"
+    "### Conclusion\n",
+    "As we observed that, even by using a single video source, we can generate a lot of analysis about the surrounding. The detection\n",
+    "aspect of this approach is definitely more mature. We can even say that the accuracy obtained through pothole detection and tracking\n",
+    "can be at least as good as LIDAR if not better. Moreover, the overall infrastructure required to setup this is negligible and\n",
+    "this can even be deployed on smartphones. The solution is completely autonomous as there is no input required from a human.\n",
+    "From object detection and tracking to 3d reconstruction, everything can be done automatically using different heuristics. A human\n",
+    "is needed only in a supervising capacity."
    ]
   }
  ],
